# DesafioI

./: Informe_Preliminar_Desafio_I_Informatica_II_2025_2.docx  ~$forme_Preliminar_Desafio_I_Informatica_II_2025_2.docx
ArchivosAdministrativos/: Informe de responsabilidades Desafíos Info II (1).docx  Informe_Final_Desafío_I_Informatica_II_2025_2.docx  Informe_Preliminar_Desafio_I_Informatica_II_2025_2.docx
CodigoDesafioI/: CMakeLists.txt  compresion.cpp  compresion.h  encotrarRotacionClave.cpp  encotrarRotacionClave.h  main.cpp  manejoArchivos.cpp  manejoArchivos.h  utilidadesBytes.cpp  utilidadesBytes.h  utilidadesCadenas.cpp  utilidadesCadenas.h
